Fading Bart out and Homer In

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android N</string>
     <string name="bart_simpson">Bart Simpson</string>
+    <string name="homer_simpson">Homer Simpson</string>
 </resources>
